libraries/ckit/regression/invalid-programs/r55.c
int (f())();


main(){
 return(0);
}
